tests/fixtures/errors/import-walker-file-system-error/src/Main.elm
module Main exposing (main)

import Html
import Helpers

main = Html.text ""
